Fix word wrap

--- a/frontend/src/components/PostComponent/PostContent/PostContent.module.scss
+++ b/frontend/src/components/PostComponent/PostContent/PostContent.module.scss
@@ -1,9 +1,9 @@
 .post-text {
-	white-space: pre-wrap;
+	white-space: pre-line;
 	font-family: inherit;
 	font-size: inherit;
 	margin: 0px;
-	word-break: break-all;
+	word-break: auto-phrase;
 }
 
 .post-images {
